# game-of-life-cpp

./: .clang-format  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  compile_commands.json  fast  makefile  readme.md  slow  test  valgrind-out.txt
.github/workflows/: push.yaml  tests.yaml
results/: benchmark.txt  benchmark_full.txt
src/: CMakeLists.txt  benchmark.cpp  graphics.cpp  logic.cpp  main.cpp  test.cpp
src/benchmark/: benchmark.cpp  generate.h  main.cpp  main_short.cpp  setBenchmarkBoard.cpp  short_main.cpp
src/board/: board.h  breeder.h  generate.cpp  generate.h  gui.h  loop.h  next.cpp  next.h  padding.h  random.cpp  random.h  render.h  sdl.cpp  sdl.h  threads.h
src/common/: breederPattern.h  lock.cpp  lock.h  setBenchmarkBoard.cpp  time.h
src/entrypoints/: benchmark.cpp  benchmark_full.cpp  benchmark_short.cpp  interactive.cpp  main.cpp  test.cpp
src/graphics/: events.cpp  events.h  gui.cpp  gui.h  handleEvents.cpp  handleEvents.h  loop.cpp  loop.h  render.cpp  render.h  renderBoard.cpp  renderBoard.h  renderImguiMenu.cpp  renderImguiMenu.h  time.cpp  time.h
src/logic/: board.cpp  board.h  gui.h  next.cpp  next.h  padding.cpp  padding.h  render.h  threads.h
src/test/: expected.txt  main.cpp
src/util/: lock.cpp  lock.h  profile.cpp  profile.h  setBenchmarkBoard.cpp  setBenchmarkBoard.h  time.cpp  time.h
